--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "async": "2.0.1"
   },
   "devDependencies": {
-    "eslint": "3.5.0"
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
-    "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
+    "start": "babel-node app.js && NODE_ENV=production node app.js",
+    "test": "npm run custom-tests && echo 'Done.'",
+    "lint": "node ./node_modules/eslint/bin/eslint . --format table --max-warnings=1 && echo '✔  Your code looks good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
+    "babel": "npm run lint && babel-node app.js"
   },
   "main": "app.js",
   "repository": {
