--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "sails": "^1.0.0-34",
+    "async": "2.0.1",
     "grunt": "1.0.1",
-    "sails-hook-orm": "^2.0.0-16",
-    "sails-hook-sockets": "^1.4.0",
-    "sails-hook-grunt": "^2.0.0",
     "lodash": "3.10.1",
-    "async": "2.0.1"
+    "sails": "^1.0.0-34",
+    "sails-hook-grunt": "^2.0.0",
+    "sails-hook-orm": "^2.0.0-16",
+    "sails-hook-sockets": "^1.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0"
   },
   "scripts": {
-    "start": "babel-node app.js && NODE_ENV=production node app.js",
-    "test": "npm run custom-tests && echo 'Done.'",
+    "start": "npm run lint && babel-node app.js && NODE_ENV=production node app.js",
+    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "node ./node_modules/eslint/bin/eslint . --format table --max-warnings=1 && echo '✔  Your code looks good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
-    "debug": "node debug app.js",
+    "debug": "npm run lint && node debug app.js",
     "babel": "npm run lint && babel-node app.js"
   },
   "main": "app.js",
