--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sails": "^1.0.0-34",
     "sails-hook-grunt": "^2.0.0",
     "sails-hook-orm": "^2.0.0-16",
-    "sails-hook-sockets": "^1.4.0"
+    "sails-hook-sockets": "^1.4.0",
+    "sails-swagger": "git@github.com:kbaylosis/sails-swagger.git"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -19,7 +20,8 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "swagger-ui-dist": "^3.0.14"
   },
   "scripts": {
     "start": "npm run lint && babel-node app.js && NODE_ENV=production node app.js",
@@ -34,5 +36,5 @@
     "url": "git://github.com/kennethbaylosis/torah.git"
   },
   "author": "kennethbaylosis",
-  "license": ""
+  "license": "UNLICENSED"
 }
