--- a/package.json
+++ b/package.json
@@ -6,18 +6,33 @@
   "keywords": [],
   "dependencies": {
     "async": "2.0.1",
+    "bcryptjs": "^2.4.3",
+    "chance": "^1.0.10",
+    "cloudinary": "^1.9.0",
+    "cron": "^1.2.1",
+    "crypto-js": "^3.1.9-1",
     "grunt": "1.0.1",
+    "is-email-node": "^1.0.2",
     "lodash": "3.10.1",
+    "moment": "^2.18.1",
+    "node-mailjet": "^3.1.0",
+    "random-token": "0.0.8",
+    "request": "^2.81.0",
     "sails": "^1.0.0-34",
     "sails-hook-grunt": "^2.0.0",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
-    "sails-swagger": "git+https://github.com/kbaylosis/sails-swagger.git"
+    "sails-hook-winston": "^1.1.0",
+    "sails-mongo": "^1.0.0-9",
+    "traverse": "^0.6.6",
+    "winston-slack-webhook": "^0.1.4",
+    "zsign": "0.0.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^6.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
