--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "cloudinary": "^1.9.0",
     "cron": "^1.2.1",
     "crypto-js": "^3.1.9-1",
+    "ejs": "~0.8.4",
     "grunt": "1.0.1",
     "is-email-node": "^1.0.2",
     "lodash": "3.10.1",
+    "lusca": "1.5.1",
     "moment": "^2.18.1",
     "node-mailjet": "^3.1.0",
+    "property-path": "^0.0.5",
     "random-token": "0.0.8",
     "request": "^2.81.0",
     "sails": "^1.0.0-34",
