--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^3.19.0",
     "swagger-ui-dist": "^3.0.14"
   },
