--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-  "presets": ["es2015", "stage-0"],
+	"presets": [[
+		"env", {
+			"targets": {
+				"node": "current"
+			}
+		}],
+		"stage-0",
+	],
 	"plugins": [
 		"add-module-exports",
 		["transform-class-properties", { "spec": true }],
