--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "2.0.1",
     "bcryptjs": "^2.4.3",
+    "captains-log": "^2.0.0",
     "chance": "^1.0.10",
     "cloudinary": "^1.9.0",
     "cron": "^1.2.1",
@@ -37,8 +38,7 @@
     "babel-eslint": "^6.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^3.19.0",
     "swagger-ui-dist": "^3.0.14"
