--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cloudinary": "^1.9.0",
     "cron": "^1.2.1",
     "crypto-js": "^3.1.9-1",
-    "ejs": "~0.8.4",
+    "ejs": "^2.5.7",
     "grunt": "1.0.1",
     "is-email-node": "^1.0.2",
     "lodash": "3.10.1",
@@ -30,6 +30,7 @@
     "sails-mongo": "^1.0.0-9",
     "sails-swagger": "https://github.com/kbaylosis/sails-swagger.git",
     "traverse": "^0.6.6",
+    "winston": "^2.4.0",
     "winston-slack-webhook": "^0.1.4",
     "zsign": "0.0.6"
   },
