--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -6,7 +6,7 @@ dependencies:
   cloudinary: 1.9.1
   cron: 1.3.0
   crypto-js: 3.1.9-1
-  ejs: 0.8.8
+  ejs: 2.5.7
   grunt: 1.0.1
   is-email-node: 1.0.2
   lodash: 3.10.1
@@ -24,6 +24,7 @@ dependencies:
   sails-mongo: 1.0.0-11
   sails-swagger: github.com/kbaylosis/sails-swagger/a8fa1e4d02a634504e7d6baf194a7107adda6d79
   traverse: 0.6.6
+  winston: 2.4.0
   winston-slack-webhook: 0.1.6
   zsign: 0.0.6
 devDependencies:
@@ -1884,11 +1885,6 @@ packages:
     dev: false
     resolution:
       integrity: sha1-WQxhFWsK4vTwJVcyoViyZrxWsh0=
-  /ejs/0.8.8:
-    deprecated: Critical security bugs fixed in 2.5.5
-    dev: false
-    resolution:
-      integrity: sha1-/9xW3MNdApJt1QrRNDm7xUBh1Zg=
   /ejs/2.5.7:
     dev: false
     engines:
@@ -6967,6 +6963,19 @@ packages:
       node: '>= 0.8.0'
     resolution:
       integrity: sha1-PJNJ0ZYgf9G9/51LxD73JRDjoS4=
+  /winston/2.4.0:
+    dependencies:
+      async: 1.0.0
+      colors: 1.0.3
+      cycle: 1.0.3
+      eyes: 0.1.8
+      isstream: 0.1.2
+      stack-trace: 0.0.10
+    dev: false
+    engines:
+      node: '>= 0.10.0'
+    resolution:
+      integrity: sha1-gIBQuT1SZh7Z+2wms/DIJnCLCu4=
   /wordwrap/0.0.2:
     dev: false
     engines:
@@ -7071,7 +7080,7 @@ specifiers:
   cloudinary: ^1.9.0
   cron: ^1.2.1
   crypto-js: ^3.1.9-1
-  ejs: ~0.8.4
+  ejs: ^2.5.7
   eslint: ^3.19.0
   grunt: 1.0.1
   is-email-node: ^1.0.2
@@ -7091,5 +7100,6 @@ specifiers:
   sails-swagger: 'git+https://github.com/kbaylosis/sails-swagger.git'
   swagger-ui-dist: ^3.0.14
   traverse: ^0.6.6
+  winston: ^2.4.0
   winston-slack-webhook: ^0.1.4
   zsign: 0.0.6
